RESOLVED FIXED58177
Sandboxing doesn't work if a local file is dropped on the content area
https://bugs.webkit.org/show_bug.cgi?id=58177
Summary Sandboxing doesn't work if a local file is dropped on the content area
Anders Carlsson
Reported 2011-04-08 16:52:14 PDT
Sandboxing doesn't work if a local file is dropped on the content area
Attachments
Patch (16.30 KB, patch)
2011-04-08 16:57 PDT, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2011-04-08 16:57:42 PDT
Anders Carlsson
Comment 2 2011-04-08 17:04:55 PDT
Note You need to log in before you can comment on or make changes to this bug.